# py-01-todo-db

./: README.md  pyproject.toml
01_todo_db/: main.py
01_todo_db/config/: db.py
01_todo_db/models/: todo.py
