[tool.poetry]
name = "01-todo-db"
version = "0.1.0"
description = ""
authors = ["Hamza Dhedhi <hamzadhedhi494@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.18"
mypy = "^1.10.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
dev = "01_todo_db.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
